[package]
name = "juicy_bencode"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/Internal-Compiler-Error/juicy_bencode"
authors = ["Internal Compiler Error"]
description = "A little parser for bencode using the Nom library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^7"
num-traits = "^0.2"
derive_more = "^0.99"
